--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,9 +24,10 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55.1
-          args: --timeout=3m
-          skip-pkg-cache: true
-          skip-build-cache: true
+          args: --timeout=3m --verbose
+          skip-pkg-cache: false
+          skip-build-cache: false
+          working-directory: .
       - name: Setup CloudQuery
         if: github.event_name == 'pull_request'
         uses: cloudquery/setup-cloudquery@v3
