--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,8 @@ jobs:
         with:
           go-version-file: go.mod
           cache: true
+      - name: Get dependencies
+        run: go mod tidy
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
@@ -33,8 +35,6 @@ jobs:
         uses: cloudquery/setup-cloudquery@v3
         with:
           version: v3.28.1
-      - name: Get dependencies
-        run: go get -t -d ./...
       - name: Build
         run: go build .
       - name: Test
