--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,8 @@ jobs:
         run: |
           go mod download
           go mod tidy
+      - name: Build
+        run: go build ./...
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
@@ -37,8 +39,6 @@ jobs:
         uses: cloudquery/setup-cloudquery@v3
         with:
           version: v3.28.1
-      - name: Build
-        run: go build .
       - name: Test
         run: make test
       - name: gen
