--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,7 @@ jobs:
         run: |
           go mod download
           go mod tidy
+          go list -m all
       - name: Build
         run: go build ./...
       - name: golangci-lint
