Explicitly installing the funk package to see if that resolves the issue.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Get dependencies
         run: |
           go env
+          go get github.com/thoas/go-funk@v0.9.3
           go mod download -x
           go mod tidy
           go list -m all
